# randomcoffee_students

./: .gitignore  Dockerfile  README.md  docker-compose.example.yml  pyproject.toml  start_1.sh
app/: __main__.py
app/configs/: bot.ini.example  general_bot_config.py  log_config.py
app/migration/: migration.sql
app/tgbot/: ui_commands.py
app/tgbot/exseptions/: exseptions.py
app/tgbot/filters/: is_user_have_username.py
app/tgbot/handlers/approve/: approve_handlers.py  approve_keyboard.py  approve_register.py
app/tgbot/messages/: 1-start_messages.json  10-suggestions.json  11-ban_messages.json  2-email_messages.json  2.1-OAuth.json  3-registration_messages.json  4-ready_messages.json  5-search_messages.json  6-approve_message.json  7-feedback_messages.json  8-user_have_not_username.json  9-ban.json
app/tgbot/middlewares/: BanUser.py  Barrier.py  DependencyInjection.py  RemovePreviousButtons.py  SkipUnnecessaryUpdate.py  Throttling.py  UpdateUsername.py
app/tgbot/models/: Criterion.py  Feedback.py  Group.py  IsuData.py  MyMessage.py  MyUser.py  WaitingCompanion.py  WorkPlace.py
app/tgbot/repositorys/: confirm_isudata_repo.py  criterion_repo.py  feedback_repo.py  group_repo.py  meetings_repo.py  start_next_matching_algo_repo.py  users_repo.py  visitor_repo.py  waiting_companions.py  work_place.py
app/tgbot/services/: BotService.py
app/tgbot/utils/: BotLogger.py  Email.py  Validate.py  delete_button.py  message_loader.py  save_message.py  state_access_wrapper.py
database/postgres/DDL/: ddl.sql
tests/: EmailTest.py  MyUserBuilderTest.py
(+35 files in other folders)
