[tool.poetry]
name = "itmo-coffee-students"
version = "0.1.0"
description = ""
authors = ["alexanderandreev <sesh_1.0@niuitmo.ru>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"

aiogram = "^2.22.1"
asyncpg = "^0.27.0"
aioredis = "^2.0.1"
ordered_enum = "^0.0.7"
typeguard = "^2.13.3"
logging = "^0.4.9.6"
redis = "^4.5.1"

[tool.poetry.group.dev.dependencies]
flake8 = "==6.0.0"
black = "==22.12.0"
pyright = "==1.1.291"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
